--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "axios": "^1.6.7",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
